2021-04-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/compare.c (IsImagesEqual): Eliminate hard
        "ImageOpacityDiffers" error when matte channel flag differs
        between the images being compared.  Instead of throwing a hard
        error, treat the opacity channel of the image as opaque if the
        matte flag is not set.

2021-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jpeg.c: It is apparently now undefined behavior to assign
        the return value from setjmp() to a variable.  Remove recently
        added code which is now doing that.  Much thanks to Chris Gravely
        for noticing this.

2021-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jpeg.c (ReadJPEGImage): Error cases depending on
        ThrowReaderException() were now leaking client data memory.
        Replace such cases with customized ThrowJPEGReaderException()
        which assures that it is freed.
        (WriteJPEGImage): Error cases depending on ThrowWriterException()
        were now client data memory.  Replace such cases with customized
        ThrowJPEGWriterException() which assures that it is freed.

2021-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jpeg.c: Restructure client data so it is allocated on the
        heap rather than the stack.  Happens to fix SourceForge issue 641
        "SIGSEGV thrown performing longjmp in jpeg.c".

2021-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/png.c (ReadOnePNGImage): Assure that null
        ping_trans_alpha pointer is not dereferenced.  Addresses oss-fuzz
        33119 "graphicsmagick:coder_MNG_fuzzer: Null-dereference READ in
        ReadOnePNGImage".

        * magick/profile.c (SetImageProfile): Use the resource-limited
        memory allocator to allocate embedded profiles.

        * magick/map.c (MagickMapCopyResourceLimitedString): New private