@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210425"
-#define public MagickPackageReleaseDate "snapshot-20210425"
+#define public MagickPackageVersionAddendum ".020210502"
+#define public MagickPackageReleaseDate "snapshot-20210502"
