@@ -35,6 +35,13 @@
 <div class="document">
 
 
+<p>2021-05-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+* magick/command.c (CompareImageCommand): If user has not
+indicated a 'matte' preference, then include the opacity channel
+in the compare if either image has a matte channel.  Addresses
+SourceForge issue #642 &quot;Result of command &quot;gm compare&quot; depends on
+order of images&quot;.</blockquote>
 <p>2021-04-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 * magick/compare.c (IsImagesEqual): Eliminate hard
